--- a/bamboo-specs/pom.xml
+++ b/bamboo-specs/pom.xml
@@ -34,10 +34,12 @@
     <dependency>
       <groupId>com.atlassian.bamboo</groupId>
       <artifactId>bamboo-specs-api</artifactId>
+     <version>9.2.15</version>
     </dependency>
     <dependency>
       <groupId>com.atlassian.bamboo</groupId>
       <artifactId>bamboo-specs</artifactId>
+      <version>9.2.15</version>
     </dependency>
 
     <!-- Test dependencies -->
