--- a/bamboo-specs/pom.xml
+++ b/bamboo-specs/pom.xml
@@ -16,7 +16,7 @@
         <artifactId>bom</artifactId>
         <version>2.16.60</version>
         <type>pom</type>
-        <scope>import</scope>
+        <scope>provided</scope>
       </dependency>
     </dependencies>
   </dependencyManagement>
