--- a/bamboo-specs/pom.xml
+++ b/bamboo-specs/pom.xml
@@ -16,14 +16,17 @@
 
   <dependencies>
     <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>regions</artifactId>
+      <version>2.16.60</version>
+    </dependency>
+    <dependency>
       <groupId>com.atlassian.bamboo</groupId>
       <artifactId>bamboo-specs-api</artifactId>
-     <version>9.2.15</version>
     </dependency>
     <dependency>
       <groupId>com.atlassian.bamboo</groupId>
       <artifactId>bamboo-specs</artifactId>
-      <version>9.2.15</version>
     </dependency>
 
     <!-- Test dependencies -->
