--- a/bamboo-specs/pom.xml
+++ b/bamboo-specs/pom.xml
@@ -9,6 +9,16 @@
     <relativePath/>
   </parent>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>software.amazon.awssdk</groupId>
+        <artifactId>bom</artifactId>
+        <version>2.16.60</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
   <groupId>com.atlassian.bamboo</groupId>
   <artifactId>bamboo-specs</artifactId>
   <version>1.0.0-SNAPSHOT</version>
@@ -18,7 +28,6 @@
     <dependency>
       <groupId>software.amazon.awssdk</groupId>
       <artifactId>regions</artifactId>
-      <version>2.16.60</version>
     </dependency>
     <dependency>
       <groupId>com.atlassian.bamboo</groupId>
