--- a/bamboo-specs/pom.xml
+++ b/bamboo-specs/pom.xml
@@ -9,16 +9,6 @@
     <relativePath/>
   </parent>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>software.amazon.awssdk</groupId>
-        <artifactId>bom</artifactId>
-        <version>2.16.60</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
   <groupId>com.atlassian.bamboo</groupId>
   <artifactId>bamboo-specs</artifactId>
   <version>1.0.0-SNAPSHOT</version>
@@ -45,6 +35,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>software.amazon.awssdk</groupId>
+        <artifactId>bom</artifactId>
+        <version>2.16.60</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <!-- run 'mvn test' to perform offline validation of the plan -->
   <!-- run 'mvn -Ppublish-specs' to upload the plan to your Bamboo server -->
