--- a/bamboo-specs/pom.xml
+++ b/bamboo-specs/pom.xml
@@ -18,11 +18,6 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
-
-      <dependency>
-        <groupId>software.amazon.awssdk</groupId>
-        <artifactId>regions</artifactId>
-      </dependency> 
     </dependencies>
   </dependencyManagement>
 
@@ -31,23 +26,27 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.atlassian.bamboo</groupId>
-      <artifactId>bamboo-specs-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.atlassian.bamboo</groupId>
-      <artifactId>bamboo-specs</artifactId>
-    </dependency>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>com.atlassian.bamboo</groupId>
+        <artifactId>bamboo-specs-api</artifactId>
+        <version>${bamboo.specs.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.atlassian.bamboo</groupId>
+        <artifactId>bamboo-specs</artifactId>
+        <version>${bamboo.specs.version}</version>
+      </dependency>
 
-    <!-- Test dependencies -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+      <!-- Test dependencies -->
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.13.2</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <!-- run 'mvn test' to perform offline validation of the plan -->
   <!-- run 'mvn -Ppublish-specs' to upload the plan to your Bamboo server -->
