--- a/bamboo-specs/pom.xml
+++ b/bamboo-specs/pom.xml
@@ -18,13 +18,12 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>software.amazon.awssdk</groupId>
+        <artifactId>regions</artifactId>
+      </dependency>
     </dependencies>
   </dependencyManagement>
-
-  <groupId>com.atlassian.bamboo</groupId>
-  <artifactId>bamboo-specs</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <packaging>jar</packaging>
 
   <dependencyManagement>
     <dependencies>
@@ -47,6 +46,11 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
+  <groupId>com.atlassian.bamboo</groupId>
+  <artifactId>bamboo-specs</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
   <!-- run 'mvn test' to perform offline validation of the plan -->
   <!-- run 'mvn -Ppublish-specs' to upload the plan to your Bamboo server -->
