--- a/bamboo-specs/pom.xml
+++ b/bamboo-specs/pom.xml
@@ -21,6 +21,7 @@
       <dependency>
         <groupId>software.amazon.awssdk</groupId>
         <artifactId>regions</artifactId>
+        <version>2.16.60</version>
       </dependency>
       <dependency>
         <groupId>com.atlassian.bamboo</groupId>
