--- a/bamboo-specs/pom.xml
+++ b/bamboo-specs/pom.xml
@@ -19,22 +19,9 @@
         <scope>import</scope>
       </dependency>
       <dependency>
-        <groupId>software.amazon.awssdk</groupId>
-        <artifactId>regions</artifactId>
-        <version>2.16.60</version>
-      </dependency>
-      <dependency>
         <groupId>com.atlassian.bamboo</groupId>
-        <artifactId>bamboo-specs-api</artifactId>
         <version>9.2.15</version>
       </dependency>
-      <dependency>
-        <groupId>com.atlassian.bamboo</groupId>
-        <artifactId>bamboo-specs</artifactId>
-        <version>9.2.15</version>
-      </dependency>
-
-      <!-- Test dependencies -->
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
@@ -47,6 +34,28 @@
   <artifactId>bamboo-specs</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+
+  <dependencies>
+    <dependency>
+      <groupId>software.amazon.awssdk</groupId>
+      <artifactId>regions</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.atlassian.bamboo</groupId>
+      <artifactId>bamboo-specs-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.atlassian.bamboo</groupId>
+      <artifactId>bamboo-specs</artifactId>
+    </dependency>
+
+    <!-- Test dependencies -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
   <!-- run 'mvn test' to perform offline validation of the plan -->
   <!-- run 'mvn -Ppublish-specs' to upload the plan to your Bamboo server -->
